force-app/main/default/objects/Mig_FreeeInvoiceLineProductMap__c/Mig_FreeeInvoiceLineProductMap__c.object-meta.xml
<CustomObject>
    <description>Migration-only product mapping dictionary for freee invoice line descriptions.</description>
    <label>Freee請求明細商品マッピング</label>
    <nameField>
        <label>マッピング名</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Freee請求明細商品マッピング</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>