force-app/main/default/objects/Mig_FreeeInvoiceLineProductMap__c/fields/Keyword__c.field-meta.xml
<CustomField>
    <fullName>Keyword__c</fullName>
    <label>キーワード</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>