force-app/main/default/objects/Mig_FreeeInvoiceLineProductMap__c/fields/MatchType__c.field-meta.xml
<CustomField>
    <fullName>MatchType__c</fullName>
    <label>一致種別</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>完全一致</fullName><default>false</default><label>完全一致</label></value>
            <value><fullName>部分一致</fullName><default>true</default><label>部分一致</label></value>
            <value><fullName>正規化一致</fullName><default>false</default><label>正規化一致</label></value>
            <value><fullName>金額一致</fullName><default>false</default><label>金額一致</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>