force-app/main/default/objects/Mig_FreeeInvoiceLineProductMap__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <defaultValue>100</defaultValue>
    <label>優先度</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>