force-app/main/default/objects/Mig_FreeeInvoiceLineProductMap__c/fields/ProductMaster__c.field-meta.xml
<CustomField>
    <fullName>ProductMaster__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>商品マスタ</label>
    <referenceTo>ProductMaster__c</referenceTo>
    <relationshipLabel>Freee請求明細商品マッピング</relationshipLabel>
    <relationshipName>MigFreeeInvoiceLineProductMaps</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>