force-app/main/default/objects/Mig_FreeeInvoiceLineProductMap__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Keyword__c</columns>
    <columns>ProductMaster__c</columns>
    <columns>MatchType__c</columns>
    <columns>Priority__c</columns>
    <columns>IsActive__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべて</label>
</ListView>